# sopt

./: .clang-format  .gitignore  CMakeLists.txt  Example_TVDN2.m  Example_weighted_TVDN.m  README.md  README.txt  index.html  makefile  sopt_mltb_solve_BPDN.m  sopt_mltb_solve_L2DN.m  sopt_mltb_solve_TVDNoA.m  sopt_mltb_solve_rwBPDN.m  style.css  traits.h
cmake_files/: AddBenchmark.cmake  AddExample.cmake  AddRegression.cmake  LookUp-GreatCMakeCookOff.cmake  LookUpGBenchmark.cmake  LookUpSopt.cmake  SoptConfig.in.cmake  SoptConfigVersion.in.cmake  catch.cmake  compilations.cmake  dependencies.cmake  export_sopt.cmake  python_dependencies.cmake  using.cc
cpp/: CMakeLists.txt  types.h
cpp/benchmarks/: CMakeLists.txt  conjugate_gradient.cc  l1_proximal.cc  wavelets.cc
cpp/examples/: CMakeLists.txt  conjugate_gradient.cc  copy_tiff.cc  datadir.in.h  l1_norm.cc  l1_proximal.cc  positive_quadrant_projection.cc  sara.cc  soft_threshhold.cc  tiffwrappers.cc  tiffwrappers.h  wavelets.cc
cpp/examples/proximal_admm/: CMakeLists.txt  euclidian_norm.cc  inpainting.cc  reweighted.cc
cpp/examples/sdmm/: CMakeLists.txt  euclidian_norm.cc  image.cc  inpainting.cc  reweighted.cc
cpp/regressions/: CMakeLists.txt  admm_inpainting.cc  l1_proximal.cc  padmm_inpainting.cc  reweighted_sdmm.cc  sdmm_inpainting.cc
cpp/sopt/: CMakeLists.txt  PowerMethod.h  admm.h  config.in.h  conjugate_gradient.cc  conjugate_gradient.h  exception.h  imaging_padmm.h  l1.h  l1_admm.h  l1_padmm.h  l1_proximal.h  linear_transform.h  logging.disabled.h  logging.enabled.h  logging.h  logging.in.h  maths.h  operators.h  padmm.h  positive_quadrant.h  power_method.h  proximal.h  proximal_expression.h  proximals.h  real_type.h  relative_variation.h  reweighted.h  sampling.cc  sampling.h  sdmm.h  types.h  utilities.cc  utilities.h  utility.h  wavelets.h  wrapper.h
cpp/sopt/wavelets/: CMakeLists.txt  direct.h  indirect.h  innards.impl.h  sara.cc  sara.h  wavelet_data.cc  wavelet_data.h  wavelets.cc  wavelets.h
cpp/tests/: CMakeLists.txt  admm.cc  common_catch_main.cc  conjugate_gradient.cc  l1.cc  linear_transform.cc  maths.cc  operators.cc  padmm.cc  padmm_warm_start.cc  power_method.cc  proximal.cc  reweighted.cc  sara.cc  sdmm.cc  sdmm_warm_start.cc  utility.cc  wavelets.cc  wrapper.cc
cpp/tools_for_tests/: CMakeLists.txt  cdata.h  copy_tiff.cc  directories.in.h  inpainting.h  tiffwrappers.cc  tiffwrappers.h
cpp/wavelets/: CMakeLists.txt  direct.h  direct.impl.cc  indirect.h  indirect.impl.cc  innards.impl.cc  innards.impl.h  sara.cc  sara.h  wavelet_data.cc  wavelet_data.h  wavelets.cc  wavelets.h  wavelets.impl.cc
doc/: CMakeLists.txt  Doxygen.in  index.html
doc/c/: _formulas.tex  annotated.html  classes.html  dir_3e29e3438f393b6b23831de472c0d32c.html  dir_82e09e1d8737fffebe5f0e222eaef285.html  dir_bcf5c9b3f6b3cf00abe9ab0d285efe18.html  dirs.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  pages.html  sopt__demo1_8c.html  sopt__demo1_8c_source.html  sopt__demo2_8c.html  sopt__demo2_8c_source.html  sopt__error_8c.html  sopt__error_8c_source.html  sopt__error_8h.html  sopt__error_8h_source.html  sopt__image_8c.html  sopt__image_8c_source.html  sopt__image_8h.html  sopt__image_8h_source.html  sopt__l1_8c.html  sopt__l1_8c_source.html  sopt__l1_8h.html  sopt__l1_8h_source.html  sopt__l2_8c.html  sopt__l2_8c_source.html  sopt__l2_8h.html  sopt__l2_8h_source.html  sopt__meas_8c.html  sopt__meas_8c_source.html  sopt__meas_8h.html  (+51 more)
doc/matlab/: Example_TVDNoA.html  Experiment1.html  Experiment3.html  index.html  sopt_mltb_solve_L2DN.html  sopt_mltb_solve_TVDN.html
doc/matlab/misc/: sopt_mltb_adjcurvelet.html  sopt_mltb_div_op_sphere.html  sopt_mltb_fwdcurvelet.html  sopt_mltb_genmask.html
images/: M31T.tiff  cameraFS_Dirty.tiff  cameraFS_L1.tiff  cameraFS_SARA.tiff  cameraFS_TV.tiff  cameraIP_Db8.tiff  cameraIP_Dirty.tiff  cameraIP_SA.tiff  cameraIP_SARA.tiff  cameraIP_TV.tiff  cameraman256.tiff
include/: CMakeLists.txt  sopt_config.in.h  sopt_error.h  sopt_image.h  sopt_l1.h  sopt_l2.h  sopt_meas.h  sopt_prox.h  sopt_ran.h  sopt_sara.h  sopt_sparsemat.h  sopt_tv.h  sopt_types.h  sopt_utility.h  sopt_wavelet.h
matlab/: Example_BPDN.m  Example_TVDN.m  Example_TVDNoA.m  Example_dr_BPDN.m  Example_dr_TVDN.m  Example_dr_TVDN2.m  Example_dr_TVDNoA.m  Example_dr_weighted_BPDN.m  Example_dr_weighted_TVDN.m  Example_weighted_BPDN.m  Experiment1.m  Experiment2.m  Experiment3.m  README.txt  example_admm_real.m  sopt_mltb_admm_bpcon.m  sopt_mltb_admm_bpconw.m  sopt_mltb_dr_BPDN.m  sopt_mltb_dr_L2DN.m  sopt_mltb_dr_TVDN.m  sopt_mltb_dr_TVDNoA.m  sopt_mltb_sara_rwBPDN.m  sopt_mltb_sara_rwTVDN.m  sopt_mltb_solve_BPDN.m  sopt_mltb_solve_TVDN.m  sopt_mltb_solve_rwTVDN.m  test_admm.m
matlab/misc/: pow_method.m  sopt_mltb_adjcurvelet.m  sopt_mltb_div_op_sphere.m  sopt_mltb_fwdcurvelet.m  sopt_mltb_gradient_op_sphere.m  sopt_mltb_modifypdf.m  sopt_mltb_struct2size.m  sopt_mltb_vdsmask.m
matlab/prox_operators/: sopt_mltb_prox_L1.m  sopt_mltb_prox_L1v2.m  sopt_mltb_prox_TV.m
matlab/test_images/: M31.fits  lena_256.tiff
misc/: sopt_mltb_SNR.m  sopt_mltb_TV_norm.m  sopt_mltb_div_op.m  sopt_mltb_genmask.m  sopt_mltb_gradient_op.m
prox_operators/: sopt_mltb_fast_proj_B2.m  sopt_mltb_prox_TVoA.m
python/: CMakeLists.txt
python/tests/: CMakeLists.txt  test_pywavelet.py
python/wavelets/: CMakeLists.txt  python.wavelets.h  wavelets.pyx
src/c/: CMakeLists.txt  doxygen.config  sopt_about.c  sopt_demo1.c  sopt_demo1_padmm.c  sopt_demo2.c  sopt_demo2_padmm.c  sopt_error.c  sopt_image.c  sopt_l1.c  sopt_l2.c  sopt_meas.c  sopt_prox.c  sopt_ran.c  sopt_sara.c  sopt_sparsemat.c  sopt_test.c  sopt_tv.c  sopt_utility.c  sopt_wavelet.c
src/matlab/: sopt_solver_l1.m  sopt_solver_l1_mex.c  sopt_solver_tv.m  sopt_solver_tv_mex.c
test_images/: Brain_low_res.mat  cameraman_256.tiff
tests/: CMakeLists.txt  wavelet_convolution.cc
wavelets/: CMakeLists.txt  convolve.impl.cc  wavelets.cc  wavelets.h
(+32 files in other folders)
