if(logging)
  add_library(common_catch_main_object OBJECT "common_catch_main.cc")
  if(CATCH_INCLUDE_DIR)
    target_include_directories(common_catch_main_object PRIVATE ${CATCH_INCLUDE_DIR})
  endif()
  if(SPDLOG_INCLUDE_DIR)
    target_include_directories(common_catch_main_object PRIVATE ${SPDLOG_INCLUDE_DIR})
  endif()
  add_dependencies(common_catch_main_object lookup_dependencies)
endif()

add_catch_test(wavelets LIBRARIES wavelets)
add_catch_test(sara LIBRARIES wavelets)
add_catch_test(utility LIBRARIES wavelets sopt)
add_catch_test(wrapper LIBRARIES sopt)
add_catch_test(conjugate_gradient LIBRARIES sopt)
add_catch_test(linear_transform LIBRARIES sopt)
add_catch_test(sdmm LIBRARIES sopt)
add_catch_test(proximal LIBRARIES sopt)
